// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message[Base] should render correctly  1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px;"
>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show
    </span>
  </button>
  <button
    class="soui-button soui-button-primary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <button
    class="soui-button soui-button-success soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="soui-button soui-button-warning soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Warn
    </span>
  </button>
  <button
    class="soui-button soui-button-danger soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Error
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Close All
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  2`] = `
<div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Duration 10 s.
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Manually close
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  3`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          middle
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-right
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-right
        </span>
      </div>
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show message.
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render default 1`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message[Base] should render default 2`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
